# iai_cgvr_collaboration

./: README.md
iai_cgvr_data_gen/: .gitignore  CMakeLists.txt  package.xml
iai_cgvr_data_gen/config/: collect_episodes.yaml  movements.yaml
iai_cgvr_data_gen/launch/: collect_episode.launch  collect_pr2_meshes.launch  command_movement.launch
iai_cgvr_data_gen/meshes/: optical_table.dae
iai_cgvr_data_gen/scripts/: collect_meshes.py
iai_cgvr_data_gen/src/: episode_logger.cpp  movement_commander.cpp
