<?xml version="1.0"?>
<package>
  <name>iai_cgvr_data_gen</name>
  <version>0.0.0</version>
  <description>The iai_cgvr_data_gen package</description>

  <maintainer email="georg@todo.todo">georg</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pr2_description</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>urdfdom_py</build_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdfdom_py</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
