<?xml version="1.0"?>
<package>
  <name>iai_cgvr_data_gen</name>
  <version>0.0.0</version>
  <description>The iai_cgvr_data_gen package</description>

  <maintainer email="georg@todo.todo">georg</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pr2_description</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>urdfdom_py</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tinyxml2</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdfdom_py</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tinyxml2</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>
